@@ -1,3 +1,8 @@
+2011-08-12  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* am/synctex.am: Add upTeX and e-upTeX.
+	* synctex-euptex.h, synctex-uptex.h: New files.
+
 2011-07-25  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* am/synctex.am (eptex_ch_synctex): Bug fix:
